tests/integration/features/sdoc/document_grammar/validation/31_composite_node_declared_in_grammar_but_composite_is_False/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: The SECTION grammar element must be declared as composite.
CHECK: Location: {{.*}}input.sdoc:6:1
